# hello-world-cpp

./: .gitignore  CMakeLists.txt  README.md
task_1_2/: CMakeLists.txt  README.md  main.cpp  process_launcher.cpp  process_launcher.h
task_3/: CMakeLists.txt  counter_manager.cpp  counter_manager.h  log_writer.cpp  log_writer.h  main.cpp  process_launcher.cpp  process_launcher.h
